fix: add fixed width to the container of buttons which deletes folders, it fixes not visibled submit button

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -229,8 +229,14 @@
   .z-4 {
     z-index: 4;
   }
+  .z-10 {
+    z-index: 10;
+  }
   .float-right {
     float: right;
+  }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
   }
   .m-auto {
     margin: auto;
@@ -258,6 +264,12 @@
   }
   .mt-25 {
     margin-top: calc(var(--spacing) * 25);
+  }
+  .-mr-2 {
+    margin-right: calc(var(--spacing) * -2);
+  }
+  .-mr-2\.5 {
+    margin-right: calc(var(--spacing) * -2.5);
   }
   .mr-4 {
     margin-right: calc(var(--spacing) * 4);
@@ -349,6 +361,9 @@
   .w-24 {
     width: calc(var(--spacing) * 24);
   }
+  .w-32 {
+    width: calc(var(--spacing) * 32);
+  }
   .w-35 {
     width: calc(var(--spacing) * 35);
   }
@@ -403,6 +418,9 @@
   }
   .items-center {
     align-items: center;
+  }
+  .items-end {
+    align-items: flex-end;
   }
   .justify-around {
     justify-content: space-around;
@@ -514,6 +532,9 @@
   .bg-gray-100 {
     background-color: var(--color-gray-100);
   }
+  .bg-transparent {
+    background-color: transparent;
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -525,6 +546,9 @@
   }
   .bg-center {
     background-position: center;
+  }
+  .p-0 {
+    padding: calc(var(--spacing) * 0);
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
